--- a/site/accueil.html
+++ b/site/accueil.html
@@ -8,29 +8,37 @@
     </head>
 
     <body>
-        <header class="centre">
-            <p class="head_title">Bienvenue au foyer bourse</p>
+        <header>
+            <div class="block">
+                <div>
+                    <p class="head_box">Bienvenue au foyer bourse</p> 
+                </div>
+            </div>
         </header>
+    <div class="block">
         <div class="page">
             <div>
                 <p class="link_style">
-                    <img class="pos" alt ="recommendation" height = 100 src="images/logo.jpg"/>
-                    <a href="recommendation.html">
-                        Recommendation de bière
-                    </a>
-                    <img class="pos" alt ="recommendation" height = 100 src="images/logo.jpg" />
+                    <img class="pos" alt ="bière" height = 50 src="images/catalogue.jfif" />
+                    <a href="tableau.html">Catalogue</a>
+                    <img class="pos" alt ="bière" height = 50 src="images/catalogue.jfif" />
                 </p>
-            </div>
-            <div> 
-                <a href="tableau.html">
-                     <p class="link_style">Tableau des prix</p>
-                </a>
             </div>               
             <div> 
-                <a href="courbes.html">
-                    <p class="link_style">Courbe des prix</p>
-                </a>
+                <p class="link_style">
+                    <img class="pos" alt ="courbe" height =50 src="images/courbes.jfif" />
+                    <a href="courbes.html">Courbe des prix</a>
+                    <img class="pos" alt ="courbe" height = 50 src="images/courbes.jfif" />
+                </p>
+            </div>
+            <div>
+                <p class="link_style">
+                    <img class="pos" alt ="reco" height = 50 src="images/recommandation.jfif" />
+                    <a href="recommandation.html">Recommandation de bière</a>
+                    <img class="pos" alt ="reco" height = 50 src="images/recommandation.jfif" />
+                </p>
             </div> 
         </div>
+    </div>
     </body>
 </html>
